fixed gamescreen scoreboard spacing

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -11,7 +11,7 @@
   align-items: center;
 }
 .startscreen .play > button {
-  padding: 1rem 2.2rem;
+  padding: 1rem 0;
   width: 30%;
   font-size: 1.25rem;
   background-color: #4285F4;
@@ -43,8 +43,9 @@
   margin-bottom: 0rem;
 }
 .gamescreen .score .bigValue {
-  font-size: 2.2rem;
+  font-size: 2.5rem;
   margin-top: -0.9rem;
+  margin-bottom: -0.7rem;
 }
 
 .gamescreen .decision {
